--- a/styl.css
+++ b/styl.css
@@ -1,56 +1,120 @@
-*,*::after,*:before{
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    -ms-box-sizing: border-box;
-    box-sizing: border-box;
-}
-body{
-    font-family: arial;
-    font-size: 16px;
+*{
     margin: 0;
-    background: linear-gradient(to right bottom, #007673, #0e0066);
-    color: #fff;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Montserrat", sans-serif;
+}
+body {
+    display: flex;
     align-items: center;
     justify-content: center;
     min-height: 100vh;
+    padding: 0 10px;
+    background: linear-gradient(180deg,#ed7504, #fff, #40f603 );
 }
-.container{
-    width: 600px;
+::selection {
+    color: #000;
+    background: #fff;
 }
-h1{
-    font-size: 60px;
+.wrapper {
+    width: 370px;
+    padding: 30px;
+    border-radius: 5px;
+    background: #222;
+    box-shadow: 7px 7px 20px rgba(0, 0, 0, 0.2);
+    color: #fff;
+}
+.wrapper header {
+    font-size: 28px;
+    font-weight: 500;
     text-align: center;
 }
-
-.row{
-   display: flex;
-   align-items: center;
-   justify-content: space-between; 
+.wrapper form {
+    margin: 40px 0 20px 0;
 }
-.col{
-    width: 48%;
-}
-select>input{
+form :where(input, select, button) {
     width: 100%;
-    margin-top: 15px;
-    font-size: 20px;
-    padding: 8px 15px;
-    font-weight: 700;
-}
-select>output{
-    width: 100%;
-    margin-top: 15px;
-    font-size: 20px;
-    padding: 8px 15px;
-    font-weight: 700;
-}
-button{
-    width: 200px;
-    display: block;
-    padding: 10px;
-    margin: 0 auto;
-    border-radius: 15px;
-    background-color:#e62e00;
+    outline: none;
+    border-radius: 5px;
+    border: none;
+    background: #444;
     color: #fff;
-    border: 0;
+}
+form p {
+    font-size: 18px;
+    margin-bottom: 5px;
+}
+form input {
+    height: 50px;
+    font-size: 17px;
+    padding: 0 15px;
+    border: 1px solid #999;
+    background: #555;
+}
+form input:focus {
+    padding: 0 14px;
+    border: 2px solid #675afe;
+    background: #555;
+}
+form .drop-list {
+    display: flex;
+    margin-top: 20px;
+    align-items: center;
+    justify-content: space-between;
+}
+.drop-list .select-box {
+    display: flex;
+    width: 115px;
+    height: 45px;
+    align-items: center;
+    border-radius: 5px;
+    justify-content: center;
+    border: 1px solid #999;
+    background: #fff;
+    color: #000;
+}
+.select-box img {
+    max-width: 21px;
+}
+.select-box select {
+    width: auto;
+    font-size: 16px;
+    background: none;
+    margin: 0 -5px 0 5px;
+    color: #000;
+}
+.select-box select::-webkit-scrollbar {
+    width: 8px;
+}
+.select-box select::-webkit-scrollbar-track {
+    background: #fff;
+}
+.select-box select::-webkit-scrollbar-thumb {
+    background: #888;
+    border-radius: 8px;
+    border-right: 2px solid #ffffff;
+}
+.drop-list .icon {
+    cursor: pointer;
+    margin-top: 30px;
+    font-size: 22px;
+    color: #fff;
+}
+form .exchange-rate {
+    font-size: 17px;
+    margin: 20px 0 30px;
+}  
+form button {
+    height: 52px;
+    color: #fff;
+    font-size: 17px;
+    cursor: pointer;
+    background: #f29603;
+    transition: background 0.3s ease, transform 0.2s ease;
+}
+form button:hover {
+    background: #03f21f;
+} 
+form button:active {
+    transform: scale(0.95);
 }
